Fixed issue with little triangle thing not showing up some of the chat message boxes

--- a/src/main/webapp/css/chat.css
+++ b/src/main/webapp/css/chat.css
@@ -7,6 +7,21 @@
    outline: 0;
  }
 
+ body {
+   padding-top: 0;
+   font-size: 15px;
+   color: #777;
+   background: #f9f9f9;
+   font-family: 'Open Sans',sans-serif;
+   margin-top:20px;
+ }
+
+ .btn btn-info,
+ .btn btn-info image{
+   background-color: #537DA9;
+   border-color: #537DA9;
+ }
+
  .btn .btn-info .image {
    margin-left:25px;
  }
@@ -16,26 +31,10 @@
    border: rgb(104, 145, 162);
  }
 
- .btn btn-info,
- .btn btn-info image{
-   background-color: #537DA9;
-   border-color: #537DA9;
- }
-
- .btn-info:hover, .btn-info:focus, .btn-info:active,
- .btn-info.active, .open>.dropdown-toggle.btn-info,
- .btn-primary:active:focus{
-   color: #fff;
-   background-color: #03585D;
-   border-color: #03585D;
- }
-
- body {
-   padding-top: 0;
-   font-size: 15px;
-   color: #777;
-   background: #f9f9f9;
-   font-family: sans-serif;
+ .btn-info:hover, .btn-info:focus, .btn-info:active, .btn-info.active, .open>.dropdown-toggle.btn-info {
+    color: #fff;
+    background-color: #03585D;
+    border-color: #03585D;
  }
 
  #chat {
@@ -47,22 +46,12 @@
    word-wrap: break-word;
    padding-right: 40px;
    padding-bottom: 10px;
-   margin-bottom: 10px;
  }
 
  .chat {
    list-style-type: none;
    margin: 0;
    padding: 20;
- }
-
- .chat-body {
-   padding-bottom: 30px;
- }
-
- #chatform {
-   margin-left: 25px;
-   margin-right: 25px;
  }
 
  .chat-image{
@@ -75,6 +64,15 @@
 
  .chat-message{
    background: #f9f9f9;
+ }
+
+ #chatform {
+   margin-left: 25px;
+   margin-right: 25px;
+ }
+
+ .chat-body {
+   padding-bottom: 30px;
  }
 
  .chat li.left .chat-body {
@@ -107,10 +105,10 @@
  }
 
  .chat li .chat-body p {
-    margin: 0;
+   margin: 0;
  }
 
- chat li.left .chat-body:before {
+ .chat li.left .chat-body:before {
    position: absolute;
    top: 10px;
    left: -8px;
@@ -165,7 +163,10 @@
    text-align: center;
    font-size: 28px;
    width: 900px;
-   color: #3C609E;
+ }
+
+ hr {
+   border-top: 2px solid #375F6F;
  }
 
  [hidden] {
@@ -177,10 +178,6 @@
    margin-bottom: 15px;
    max-width: 100%;
  }
-
- #join-conversation{
-    font-size: 26px;
-  }
 
  .primary-font {
    color: #3c8dbc;
@@ -195,15 +192,11 @@
    -webkit-border-radius: 65em;
  }
 
- #test{
-   position: absolute;
- }
-
  textarea{
    width: 900px;
    height: 70px;
    outline: none;
    padding: 10px;
+   margin-top: 15px;
    font-size: 15px;
-   margin-bottom: 5px;
-}
+ }
